version 0.7-10

o Let hetcor() work with objects that inherit from "data.frame" (suggestion of Emil O. W. Kirkegaard).

version 0.7-9

o  Further protection/warnings against inadmissible correlations.

o  Protect against out-of-order thresholds during optimization (suggestion of Evgeny Mirkes).

o  hetcor() doesn't die when an error is thrown computing a correlation, which is now set to NA.

o  hetcor() now uses Matrix::nearPD() to force a postitive-definite results rather than the depricated sfsmisc::nearcor() (suggestion of Timothy Bates).

o  Improved clarity of documentation.

o  See the CHANGES file for prior versions.