@@ -1,6 +1,7 @@
-# last modified 5 Dec 07 by J. Fox
+# last modified 2016-10-05 by J. Fox
 
 "hetcor" <-
-function(data, ..., ML=FALSE, std.err=TRUE, bins=4, pd=TRUE){
+function(data, ..., ML=FALSE, std.err=TRUE, 
+         use=c("complete.obs", "pairwise.complete.obs"), bins=4, pd=TRUE){
   UseMethod("hetcor")
   }
