@@ -1,10 +1,12 @@
-# last modified 25 January 2009 by J. Fox
+# last modified 2016-10-05 by J. Fox
 
 hetcor.default <-
-	function (data, ..., ML = FALSE, std.err = TRUE, bins = 4, pd = TRUE) 
+	function (data, ..., ML = FALSE, std.err = TRUE, 
+	          use=c("complete.obs", "pairwise.complete.obs"), bins = 4, pd = TRUE) 
 {
+	use <- match.arg(use)
 	dframe <- data.frame(data, ...)
 	if (!missing(...)) names(dframe)[1] <- deparse(substitute(data))
-	hetcor(dframe, ML = ML, std.err = std.err, bins = bins, pd = pd)
+	hetcor(dframe, ML = ML, std.err = std.err, use=use, bins = bins, pd = pd)
 }
 
