@@ -2,6 +2,8 @@ version 0.7-10
 
 o Let hetcor() work with objects that inherit from "data.frame" (suggestion of Emil O. W. Kirkegaard).
 
+o Allow empty pairs when use="pairwise.complete.obs" for hetcor() (suggestion of Emil O. W. Kirkegaard).
+
 version 0.7-9
 
 o  Further protection/warnings against inadmissible correlations.
